# Django_MiniProject

./: .gitignore  README.md  pyproject.toml
.github/COMMIT_TEMPLATE/: .gitmessage.txt
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: checks.yml
accounts/: models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_rename_account_type_account_type.py
analysis/: analyzers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
analysis/migrations/: 0001_initial.py
config/: asgi.py  celery.py  constants.py  dev_urls.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
core/: tests.py
core/management/commands/: wait_for_db.py
notifications/: models.py  serializers.py  signals.py  tests.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
transactions/: models.py  serializers.py  tests.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_trans_date_and_more.py  0003_alter_transaction_trans_date_and_more.py
users/: mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
