[tool.poetry]
name = "django-mini"
version = "0.1.0"
description = ""
authors = ["meoyoug <eodyd426@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-restframework = "^0.0.1"
django-extensions = "^3.2.3"
setuptools = "^72.2.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
drf-yasg = "^1.21.7"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120